# UNGKernel

./: Kconfig.rej  Makefile  Makefile.rej  README.md  tcp.patch  ung-clang.config
arch/arm/: Makefile
clangbuild/: selarch.sh
clangbuild/arm/: clang-wrap.sh
clangbuild/i586/: clang-wrap.sh
clangbuild/x86_64/: clang-wrap.sh
cmd/fsck_zfs/: Makefile.in
cmd/mount_zfs/: Makefile.in
cmd/vdev_id/: Makefile.in
cmd/zdb/: Makefile.in
cmd/zfs/: Makefile.in
cmd/zhack/: Makefile.in
cmd/zinject/: Makefile.in
cmd/zpios/: Makefile.in
cmd/zpool/: Makefile.in
cmd/zstreamdump/: Makefile.in
cmd/ztest/: Makefile.in
cmd/zvol_id/: Makefile.in
crypto/: testmgr.c
dracut/: Makefile.in
dracut/90zfs/: Makefile.in
drivers/dma/: edma.c
drivers/md/: dm-crypt.c  raid10.c
etc/: Makefile.in
etc/init.d/: Makefile.am  Makefile.in
etc/zfs/: Makefile.in
fs/cifs/: cifsglob.h
fs/reiserfs/: journal.c
fs/xfs/: xfs_log_recover.c
include/asm-generic/: cmpxchg-local.h
include/linux/: Makefile.in  compiler.h  init.h  tcp.h
include/net/: cipso_ipv4.h  tcp.h
include/sys/: Makefile.in
kernel/: mutex.c
lib/: Makefile
lib/libavl/: Makefile.in
lib/libefi/: Makefile.in
lib/libnvpair/: Makefile.in
lib/libshare/: Makefile.in
lib/libspl/: Makefile.in
lib/libunicode/: Makefile.in
lib/libuutil/: Makefile.in
lib/libzfs/: Makefile.in
man/: Makefile.in
net/ipv4/: tcp.c  (+7 more)
scripts/: Kbuild.include  common.sh
spl/: Makefile.in  configure  spl_config.h  spl_config.h.in
udev/: Makefile.in
zfs/: Makefile.in  configure  zfs_config.h  zfs_config.h.in
(+43 files in other folders)
